--- a/test1.ipynb
+++ b/test1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a6c001f2-0508-479d-b614-deb0f5deef61",
    "metadata": {},
    "outputs": [
@@ -10,27 +10,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cpu\n",
-      "Generation 0 of 10 Metaloss: 0.8864062428474426 runtime: 23.66028118133545 s\n",
-      "Generation 1 of 10 Metaloss: 0.8778125047683716 runtime: 46.6940541267395 s\n",
-      "Generation 2 of 10 Metaloss: 0.8899999856948853 runtime: 69.7223858833313 s\n",
-      "Generation 3 of 10 Metaloss: 0.8806250095367432 runtime: 93.08418011665344 s\n",
-      "Generation 4 of 10 Metaloss: 0.8731250166893005 runtime: 116.24975109100342 s\n",
-      "Generation 5 of 10 Metaloss: 0.8737499713897705 runtime: 140.23720407485962 s\n"
+      "Using device: mps\n",
+      "Downloading http://ai.stanford.edu/~acoates/stl10/stl10_binary.tar.gz to ./stl10_binary.tar.gz\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 163\u001b[0m\n\u001b[1;32m    160\u001b[0m MetaParams[i, :, :] \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mstack([p\u001b[38;5;241m.\u001b[39mMetaParams \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m Population])\n\u001b[1;32m    162\u001b[0m \u001b[38;5;66;03m# Perform unsupervised learning on population\u001b[39;00m\n\u001b[0;32m--> 163\u001b[0m \u001b[43mmethod1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mUnsupLifetime\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPopulation\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43munsup_loader\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    165\u001b[0m \u001b[38;5;66;03m# Perform supervised learning from population to comptue meta-loss\u001b[39;00m\n\u001b[1;32m    166\u001b[0m MetaLoss[i, :] \u001b[38;5;241m=\u001b[39m method1\u001b[38;5;241m.\u001b[39mComputeMetaLoss(Population, train_loader, test_loader)\n",
-      "File \u001b[0;32m~/PycharmProjects/MetaLearnUnsupPlast/SemiSupMethods.py:85\u001b[0m, in \u001b[0;36mSemiSupMethod1.UnsupLifetime\u001b[0;34m(self, Population, unsup_loader)\u001b[0m\n\u001b[1;32m     82\u001b[0m V \u001b[38;5;241m=\u001b[39m Population[j](X)\n\u001b[1;32m     84\u001b[0m \u001b[38;5;66;03m# Update params\u001b[39;00m\n\u001b[0;32m---> 85\u001b[0m \u001b[43mPopulation\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mUpdateParams\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/PycharmProjects/MetaLearnUnsupPlast/Agents.py:130\u001b[0m, in \u001b[0;36mFCFFwdUnsupAgent.UpdateParams\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    127\u001b[0m W\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mMetaParams[\u001b[38;5;241m4\u001b[39m]\u001b[38;5;241m*\u001b[39maPost\u001b[38;5;241m.\u001b[39mT\u001b[38;5;129m@aPre\u001b[39m\u001b[38;5;241m*\u001b[39mPreScale\u001b[38;5;241m*\u001b[39mWscale\u001b[38;5;241m/\u001b[39mBatchScale\n\u001b[1;32m    129\u001b[0m \u001b[38;5;66;03m# Homeostatic\u001b[39;00m\n\u001b[0;32m--> 130\u001b[0m W\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mMetaParams[\u001b[38;5;241m5\u001b[39m]\u001b[38;5;241m*\u001b[39m(\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43maPost\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m)\u001b[38;5;129m@aPre\u001b[39m\n\u001b[1;32m    132\u001b[0m \u001b[38;5;66;03m#W+=self.MetaParams[5]*W*MeanaPre\u001b[39;00m\n\u001b[1;32m    133\u001b[0m \u001b[38;5;66;03m#W+=self.MetaParams[6]*W*MeanaPost[:, torch.newaxis]\u001b[39;00m\n\u001b[1;32m    134\u001b[0m \n\u001b[1;32m    135\u001b[0m \u001b[38;5;66;03m# Oja's\u001b[39;00m\n\u001b[1;32m    136\u001b[0m W\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mMetaParams[\u001b[38;5;241m7\u001b[39m]\u001b[38;5;241m*\u001b[39maPost\u001b[38;5;241m.\u001b[39mT\u001b[38;5;241m@\u001b[39m(aPre\u001b[38;5;241m-\u001b[39maPost\u001b[38;5;129m@W\u001b[39m)\u001b[38;5;241m*\u001b[39mPreScale\u001b[38;5;241m*\u001b[39mWscale\u001b[38;5;241m/\u001b[39mBatchScale\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.10/site-packages/torch/_tensor.py:38\u001b[0m, in \u001b[0;36m_handle_torch_function_and_wrap_type_error_to_not_implemented.<locals>.wrapped\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(f, assigned\u001b[38;5;241m=\u001b[39massigned)\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapped\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     37\u001b[0m         \u001b[38;5;66;03m# See https://github.com/pytorch/pytorch/issues/75462\u001b[39;00m\n\u001b[0;32m---> 38\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mhas_torch_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     39\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(wrapped, args, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m     40\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m f(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 22%|██▏       | 568819712/2640397119 [09:49<1:17:35, 444986.29it/s]"
      ]
     }
    ],
@@ -71,7 +59,7 @@
     "NumGenerations = 10\n",
     "\n",
     "# Population size\n",
-    "PopSize = 100\n",
+    "PopSize = 50\n",
     "\n",
     "# Standard deviation for initializing\n",
     "# meta-params\n",
